// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-slide-transition Tabs example 1`] = `
<div>
  <div
    class="m-navbar m--is-skin-tab-light m--is-multiline"
    style="position: relative;"
  >
    <div
      class="m-navbar__max-width"
      style="max-width: 1200px;"
    >
      <!---->
       
      <div
        class="m-navbar__contents"
      >
        <div
          class="m-navbar__wrap"
        >
          <ul
            class="m-navbar__list"
            role="menubar"
          >
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 1
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 2
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 3
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 4
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 5
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 6
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 7
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
             
            <!---->
             
            <!---->
          </ul>
        </div>
      </div>
       
      <!---->
    </div>
    <div
      class="resize-sensor"
      dir="ltr"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        class="resize-sensor-expand"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-slide-transition m--is-left-to-right-transition"
  >
    <div
      class="m-u--margin-top"
    >
      <h3
        class="m-u--no-margin"
      >
        Tab 1
      </h3>
       
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
    </div>
  </div>
   
  <div
    class="m-u--margin-top--m"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Add tab 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m-u--margin-left m--is-skin-secondary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Delete tab 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <button
      class="m-button m-u--margin-left m--is-skin-secondary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Disabled transition 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-slide-transition automatic-scroll=false 1`] = `
<div>
  <div
    class="m-navbar m--is-skin-tab-light m--is-multiline"
    style="position: relative;"
  >
    <div
      class="m-navbar__max-width"
      style="max-width: 1200px;"
    >
      <!---->
       
      <div
        class="m-navbar__contents"
      >
        <div
          class="m-navbar__wrap"
        >
          <ul
            class="m-navbar__list"
            role="menubar"
          >
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 1
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 2
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
            <li
              class="m-navbar-item"
              role="menuitem"
            >
              <div
                class="m-navbar-item__contents"
                role="button"
                style="white-space: nowrap;"
                tabindex="0"
              >
                <div
                  class="m-navbar-item__text"
                >
                  <!---->
                   
                  <div>
                    
                    Tab 3
                
                  </div>
                   
                  <!---->
                </div>
              </div>
            </li>
             
            <!---->
             
            <!---->
          </ul>
        </div>
      </div>
       
      <!---->
    </div>
    <div
      class="resize-sensor"
      dir="ltr"
      style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
    >
      <div
        class="resize-sensor-expand"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s;"
        />
      </div>
      <div
        class="resize-sensor-shrink"
        style="pointer-events: none; position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; z-index: -1; visibility: hidden; max-width: 100%;"
      >
        <div
          style="position: absolute; left: 0px; top: 0px; transition: 0s; width: 200%; height: 200%;"
        />
      </div>
    </div>
  </div>
   
  <div
    class="m-slide-transition m--is-left-to-right-transition"
  >
    <div
      class="m-u--margin-top"
    >
      <h3
        class="m-u--no-margin"
      >
        Tab 1
      </h3>
       
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laudantium odio ipsum, quae quos cum dolor, omnis perferendis, veritatis deleniti iusto consectetur? Impedit tempora quam ab laborum maiores sapiente earum?
      </p>
    </div>
  </div>
</div>
`;
